# nonebot-plugin-group-file-admin

./: .gitignore  README.md  pyproject.toml
src/group_file_admin/: __init__.py  config.py  dataclass.py
src/nonebot_plugin_group_file_admin/: __init__.py  config.py  model.py
